<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <!-- ImageView for the memory image -->
    <ImageView
        android:id="@+id/image_memory"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/memory_image"
        android:scaleType="centerCrop"
        android:src="@drawable/crocodile_without_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView for the memory name -->
    <TextView
        android:id="@+id/text_view_memory_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/memory_name_recycle"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/image_memory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_memory" />

    <!-- TextView for the date -->
    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        app:layout_constraintEnd_toStartOf="@id/image_memory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_memory_name" />

    <!-- TextView for the location -->
    <TextView
        android:id="@+id/text_view_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location_recycle"
        app:layout_constraintEnd_toStartOf="@id/image_memory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_date" />

    <!-- TextView for the details -->
    <TextView
        android:id="@+id/text_view_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_recycle"
        app:layout_constraintEnd_toStartOf="@id/image_memory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_location" />

</androidx.constraintlayout.widget.ConstraintLayout>